fix page loader width issue on mobile

--- a/client/src/Components/HomePageLoader/HomePageLoader.css
+++ b/client/src/Components/HomePageLoader/HomePageLoader.css
@@ -57,10 +57,3 @@
 
   margin-bottom: 2px;
 }
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  .card {
-    width: auto;
-  }
-}
